--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,52 +1,68 @@
-name: Daily Website Login
+name: lunes Auto Login
 
 on:
   schedule:
-    #- cron: '0 12 * * 5'  # 每周五北京时间20时运行一次
-  workflow_dispatch:  # 允许手动触发测试
+    - cron: '0 12 * * 5'  # 每周五北京时间20时运行一次
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
-  login:
+  renew:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: 📥 Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
+      - name: 🐍 Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
 
-    - name: Install dependencies
-      run: |
-        npm install puppeteer axios node-telegram-bot-api
+      - name: 📦 Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb
+          pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Install Puppeteer dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          libx11-6 libxcomposite1 libxcursor1 libxdamage1 libxext6 \
-          libxfixes3 libxi6 libxtst6 libnss3 libglib2.0-0 libgtk-3-0t64 \
-          libasound2t64 libxrandr2 libpangocairo-1.0-0 libatk1.0-0 \
-          libatk-bridge2.0-0 libcups2 libdbus-1-3 libdrm2 libgbm1 \
-          libgdk-pixbuf2.0-0
+      - name: 🚀 Run login script
+        env:
+          ACCOUNTS_BATCH: ${{ secrets.ACCOUNTS_BATCH }}
+        run: |
+          python login.py
 
-    - name: Run login script
-      id: login-step
-      run: node login.js
-      env:
-        WEBSITE_URL: ${{ secrets.WEBSITE_URL }}
-        USERNAME: ${{ secrets.USERNAME }}
-        PASSWORD: ${{ secrets.PASSWORD }}
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-      continue-on-error: true
+      # 📸 上传截图（无论成功或失败）
+      - name: 📸 Upload debug screenshots
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: op-screenshots
+          path: |
+            screenshots/*.png
 
-    - name: Upload failure screenshot as Artifact
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: login-debug
-        path: login-failure.png
-        retention-days: 7
+      # ⏱️ 提交 time.txt 到仓库(用于解决60天无文件变化的限制)
+      - name: Commit time.txt to repo
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          if [ ! -f time.txt ]; then
+            echo "首次生成时间：$(date +'%Y-%m-%d %H:%M:%S')" > time.txt
+          else
+            echo "$(date +'%Y-%m-%d %H:%M:%S')" > time.txt
+          fi
+
+          git add time.txt
+
+          if git diff --cached --quiet; then
+            echo "无变化，无需提交"
+          else
+            git commit -m "⏱️ 更新时间文件: $(date +'%Y-%m-%d %H:%M:%S')"
+            git push origin HEAD:main
+          fi
